[package]
name = "ttl-file"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
walkdir = "2.4"
humantime = "2.1"

[dependencies.env_logger]
version = "0.10"
default-features = false
features = ["humantime"]

[dependencies.notify]
version = "8.0"
default-features = false
features = ["macos_fsevent"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
